--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
-        <script src="custom-elements/custom-elements.min.js"></script>
         <script src="bower_components/jquery/dist/jquery.min.js"></script>
+        <script src="custom-elements/custom-elements.min.js"></script>
         <script src="js/app.js"></script>
         <link rel="import" href="templates/default.html" onload="load()">
         <link rel="import" href="templates/special.html" onload="loadSpecial()">
@@ -15,5 +15,6 @@
       <my-div testV1=1>I am the content that goes into &lt;my-div&gt;'s shadowDOM's '&lt;content&gt;' tags</my-div>
       <my-decorated-div><p>I am inside the content tag of the template that built my parent, which is a custom element. I am styled using the '::content' selector within shadowDoM</p></my-decorated-div>
       <my-special-div><p>I am inside the content tag of the template that built my parent, which is a custom element. I am styled using the '::content' selector within shadowDoM</p></my-special-div>
+      <awesome-div animate></awesome-div>
     </body>
 </html>
